--- a/spring-boot/spring-boot-actuator/src/main/resources/application.properties
+++ b/spring-boot/spring-boot-actuator/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-#management.endpoint.metrics.enabled=false
-management.endpoints.web.exposure.include=mappings,beans,startup,env,scheduledtasks,caches,metrics,health
-
-
+management.endpoints.web.exposure.include=*
+management.endpoint.loggers.enabled=true
+management.endpoint.restart.enabled=true
+management.endpoint.refresh.enabled=true
+management.endpoint.health.enabled=true
+management.security.enabled=false
+management.health.db.enabled=true
+management.health.diskspace.enabled=true
